--- a/commercial.html
+++ b/commercial.html
@@ -122,6 +122,20 @@
             <hr>
             <p> &copy;2020 ClearSky Legal Pty Ltd.  All Rights Reserved </p>
          </div>
+         <button class="back-to-top  hidden">  <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="back-to-top-icon"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M7 11l5-5m0 0l5 5m-5-5v12"
+            />
+          </svg></button>
     </footer>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-migrate-3.4.0.min.js" integrity="sha256-mBCu5+bVfYzOqpYyK4jm30ZxAZRomuErKEFJFIyrwvM=" crossorigin="anonymous"></script>
