--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                                 <h4 class="sub-title1">Commercial Law</h4>
                                 <p>We specialise in helping small and medium businesses from major transactions to matters in day-to-day business operations.</p>
                                 <a href="commercial.html">
-                                    <span class="move-right">
+                                    <div class="move-right">
                                         More Details
-                                    </span>
-                                <i class="fa-solid fa-arrow-right-long right-arrow"></i>
+                                        <i class="fa-solid fa-arrow-right-long right-arrow"></i>
+                                    </div>
                                 </a>
                             </div>
                         </div>
@@ -74,10 +74,10 @@
                                 <h4 class="sub-title1">Property Law</h4>
                                 <p>We represent vendors and purchasers in residential and commercial properly conveyancing. We are particularly passionate...</p>
                                 <a href="property.html">
-                                    <span class="move-right">
+                                    <div class="move-right">
                                         More Details
-                                    </span>
-                                <i class="fa-solid fa-arrow-right-long right-arrow"></i>
+                                        <i class="fa-solid fa-arrow-right-long right-arrow"></i>
+                                    </div>
                                 </a>
                             </div>
                         </div>
@@ -87,10 +87,10 @@
                                 <h4 class="sub-title1">Immigration</h4>
                                 <p>We advise businesses and indivdiuals with their Australian immigration queries through skilled, employer-sponsored, investment and family...</p>
                                 <a href="immigration.html">
-                                    <span class="move-right">
+                                    <div class="move-right">
                                         More Details
-                                    </span>
-                                <i class="fa-solid fa-arrow-right-long right-arrow"></i>
+                                        <i class="fa-solid fa-arrow-right-long right-arrow"></i>
+                                    </div>
                                 </a>
                             </div>
                         </div>
@@ -100,10 +100,10 @@
                                 <h4 class="sub-title1">Dispute Resolutions</h4>
                                 <p>We advocate for our clients in complex civil disputes, and at all times maintaining a clear focus on the best possible outcomes for...</p>
                                 <a href="dispute.html">
-                                    <span class="move-right">
+                                    <div class="move-right">
                                         More Details
-                                    </span>
-                                <i class="fa-solid fa-arrow-right-long right-arrow"></i>
+                                        <i class="fa-solid fa-arrow-right-long right-arrow"></i>
+                                    </div>
                                 </a>
                             </div>
                         </div>
